# AITH-GenSpeech-2025

Group_HW1/: Group_HW1.ipynb  normalize.py  pyproject.toml
Group_HW1/src/: __init__.py  model.py
HW1/: HW1.ipynb  melbanks.py
HW2/: HW2.ipynb  wav2vec2decoder.py
