[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asr_hw1_model"
version = "0.1.0"
description = "ASR model for Group HW1 speech recognition inference."
authors = [
  { name="Aleksander K and Anna K", email="placeholder@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License", # Choose an appropriate license
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech"
]
dependencies = [
    "torch>=1.10.0",
    "torchaudio>=0.10.0",
    "pandas>=1.0.0",
    "tqdm>=4.0.0",
    "nemo-text-processing>=0.1.0"
]


[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["weights/*"]